--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   
       <a href="pages/team.html" class="resource-item">
         <i class="fa-solid fa-users"></i>
-        <span>Animation Team</span>
+        <span>Team</span>
       </a>
   
       <a href="pages/store.html" class="resource-item">
