--- a/pages/team.html
+++ b/pages/team.html
@@ -208,6 +208,7 @@
                         instagram: 'fa-brands fa-instagram',
                         linkedin: 'fa-brands fa-linkedin',
                         dribbble: 'fa-brands fa-dribbble',
+                        spotify: 'fa-brands fa-spotify',
                         website: 'fa-solid fa-globe'
                     };
 
@@ -361,6 +362,8 @@
             composer.setSize(window.innerWidth, window.innerHeight);
         });
     </script>
+
+<script src="../main.js"></script>
 </body>
 
 </html>
