--- a/pages/events.html
+++ b/pages/events.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -248,6 +248,7 @@
             composer.setSize(window.innerWidth, window.innerHeight);
         });
     </script>
+    <script src="../main.js"></script>
 </body>
 
 </html>
